Formatted timestamps with momentjs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "node-chat-app",
+  "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
@@ -15,11 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "moment": "^2.15.1",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oscarwlo/node-chat-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oscarwlo/node-chat-app/issues"
+  },
+  "homepage": "https://github.com/oscarwlo/node-chat-app#readme",
+  "description": ""
 }
